Fix overflowing text

--- a/src/components/shared/transactionAddress/transactionAddress.css
+++ b/src/components/shared/transactionAddress/transactionAddress.css
@@ -9,6 +9,14 @@
   align-items: flex-start;
   box-sizing: border-box;
   margin: 0;
+  overflow: hidden;
+
+  & > span {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+  }
 
   & .subTitle {
     @mixin contentNormal;
